# kite

./: .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  breakpoints.txt  get_kite_binaries.sh  lua  lua.dbg  pyproject.toml  requirements.txt  run  test
.github/workflows/: test.yml
binaries/: page_fault  piping  simply_execve  simply_exit  simply_fork  simply_write  waiting
examples/: prog
programs/: Makefile  debug_print.s  link.ld  open.s  page_fault.c  piping.c  simply_execve.c  simply_exit.c  simply_fork.c  simply_write.c  unistd.h  waiting.c  write.s
programs/pyrisc/: .gitignore  Makefile  link.ld  simply_execve.c  simply_fork.c
programs/pyrisc/syscalls/: read.s
programs/syscalls/: execve.s  exit.s  fork.s  openat.s  pipe2.s  read.s  sigsuspend.s  wait.s
programs/unicorn/: Makefile  crt0.s  simply_exit.c
programs/unicorn/syscalls/: execve.s  exit.s  pipe.s  write.s
src/kite/: __main__.py  consts.py  cpu_context.py  job_queue.py  kernel.py  loading.py  log_defs.py  process.py  procstat.py  scheduler.py  signals.py  simulator.py  struct_definitions.py  utils.py
src/kite/simulators/: pyrisc.py  simulator.py  unicorn.py
tests/: init  page_fault  piping  simply_execve  simply_exit  simply_fork  simply_write  waiting
