[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kite_floating_kernel"
version = "0.0.1"
authors = [
  { name="Dawid Sroka" },
]
description = "floating kernel"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""
